Update CDK to split GC lambda